test/fail/macro-param-redeclare.rnp
macro x($a, $a) {}
x(1, 1);
---
 --> fail/macro-param-redeclare.rnp:1:13
  |
1 | macro x($a, $a) {}
  |             ^^ Cannot shadow or redeclare $a
  |
